--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,7 @@
-version: "3.9"
-
 services:
   web:
     build: .
-    command: rails s -b 0.0.0.0
+    command: rails s -b 0.0.0.0 -e development
     volumes:
       - .:/app
     ports:
@@ -12,12 +10,16 @@ services:
     stdin_open: true
     depends_on:
       - db
-  
+
   db:
     image: postgres:15-alpine
     environment:
       POSTGRES_USER: ikku
       POSTGRES_PASSWORD: ikku193
-      POSTGRES_DB: myapp_development
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+
+volumes:
+  postgres_data:
