ADD:既存のゲームキット一覧画面に、

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   web:
     build: .
-    command: rails s -b 0.0.0.0 -e development
+    command: rails s -b 0.0.0.0
     volumes:
       - .:/app
     ports:
