--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,10 @@ services:
     tty: true
     stdin_open: true
     depends_on:
+      - redis
       - db
+    environment:
+      - REDIS_URL=redis://redis:6379/1
 
   db:
     image: postgres:15-alpine
@@ -21,5 +24,13 @@ services:
     ports:
       - "5432:5432"
 
+  redis:
+    image: redis:7
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+
 volumes:
   postgres_data:
+  redis_data:
