--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - db
     environment:
       - REDIS_URL=redis://redis:6379/1
+      - TZ=Asia/Tokyo
 
   db:
     image: postgres:15-alpine
